# jobcontrol

./: .gitignore  Dockerfile  README.md  iv.yaml  pyproject.toml  tasks.py  vi.yaml
.circleci/: config.yml
.github/workflows/: build-publish.yml  dockerhub.yml  tests.yml
docs/: ci.md  deps_and_runner.md  docker.md  entorno.md  planificacion.md  task_runner.md  tests.md
src/: Horario.py  Proyecto.py  dia.py  horario.py  proyecto.py  usuario.py
tests/: test_horario.py  test_usuario.py
