[tool.poetry]
name = "jobcontrol"
version = "0.1.0"
description = ""
authors = ["morevi <morevi@correo.ugr.es>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
check = {cmd = "python -m py_compile app.py", help = "Check app.py sintaxis"}
