[tool.poetry]
name = "jobcontrol"
version = "0.1.0"
description = ""
authors = ["morevi <morevi@correo.ugr.es>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
invoke = "^1.6.0"
ward = "^0.65.0-beta.0"
assertpy = "^1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ward]
path = ["unit_test"]
capture-output = false
order = "standard"
test-output-style = "test-per-line"
fail-limit = 10
progress-style = ["bar"]
show-diff-symbols = true
